--- a/content/resources/10-805js06-th.md
+++ b/content/resources/10-805js06-th.md
@@ -3,7 +3,7 @@ content_type: resource
 description: Photo of the aftermath of the Gramercy Works Alumina Plant Explosion.
   (Image is taken from the Department of Labor Mine Safety and Health Administration
   Web site.)
-file: /media/courses/10-805j-technology-law-and-the-working-environment-spring-2006/4142649eb92805c174188861ee6380e4_10-805js06-th.jpg
+file: /courses/10-805j-technology-law-and-the-working-environment-spring-2006/4142649eb92805c174188861ee6380e4_10-805js06-th.jpg
 file_type: image/jpeg
 image_metadata:
   caption: "Gramercy Works Alumina Plant Explosion. (Image is taken from the Department\
@@ -16,3 +16,5 @@ resourcetype: Image
 title: Gramercy Works Alumina Plant Explosion (thumbnail)
 uid: 4142649e-b928-05c1-7418-8861ee6380e4
 ---
+Photo of the aftermath of the Gramercy Works Alumina Plant Explosion. (Image is taken from the Department of Labor Mine Safety and Health Administration Web site.)
+
