--- a/content/resources/10-805js06.md
+++ b/content/resources/10-805js06.md
@@ -3,7 +3,7 @@ content_type: resource
 description: Photo of the aftermath of the Gramercy Works Alumina Plant Explosion.
   (Image is taken from the Department of Labor Mine Safety and Health Administration
   Web site.)
-file: /media/courses/10-805j-technology-law-and-the-working-environment-spring-2006/e3691271310ab6309b114e785daf6605_10-805js06.jpg
+file: /courses/10-805j-technology-law-and-the-working-environment-spring-2006/e3691271310ab6309b114e785daf6605_10-805js06.jpg
 file_type: image/jpeg
 image_metadata:
   caption: "Gramercy Works Alumina Plant Explosion. (Image is taken from the Department\
@@ -16,3 +16,5 @@ resourcetype: Image
 title: Gramercy Works Alumina Plant Explosion
 uid: e3691271-310a-b630-9b11-4e785daf6605
 ---
+Photo of the aftermath of the Gramercy Works Alumina Plant Explosion. (Image is taken from the Department of Labor Mine Safety and Health Administration Web site.)
+
