--- a/content/resources/10-805js06-th.md
+++ b/content/resources/10-805js06-th.md
@@ -11,10 +11,10 @@ image_metadata:
   credit: ''
   image-alt: Photo of Gramercy Works Alumina Plant Explosion.
 learning_resource_types: []
+license: https://creativecommons.org/licenses/by-nc-sa/4.0/
 ocw_type: OCWImage
 resourcetype: Image
 title: Gramercy Works Alumina Plant Explosion (thumbnail)
 uid: 4142649e-b928-05c1-7418-8861ee6380e4
 ---
 Photo of the aftermath of the Gramercy Works Alumina Plant Explosion. (Image is taken from the Department of Labor Mine Safety and Health Administration Web site.)
-
