--- a/content/resources/10-805js06.md
+++ b/content/resources/10-805js06.md
@@ -11,10 +11,10 @@ image_metadata:
   credit: ''
   image-alt: Photo of Gramercy Works Alumina Plant Explosion.
 learning_resource_types: []
+license: https://creativecommons.org/licenses/by-nc-sa/4.0/
 ocw_type: OCWImage
 resourcetype: Image
 title: Gramercy Works Alumina Plant Explosion
 uid: e3691271-310a-b630-9b11-4e785daf6605
 ---
 Photo of the aftermath of the Gramercy Works Alumina Plant Explosion. (Image is taken from the Department of Labor Mine Safety and Health Administration Web site.)
-
