--- a/content/resources/10-805js06.md
+++ b/content/resources/10-805js06.md
@@ -4,10 +4,12 @@ description: Photo of the aftermath of the Gramercy Works Alumina Plant Explosio
   (Image is taken from the Department of Labor Mine Safety and Health Administration
   Web site.)
 file: /courses/10-805j-technology-law-and-the-working-environment-spring-2006/e3691271310ab6309b114e785daf6605_10-805js06.jpg
+file_size: 56531
 file_type: image/jpeg
 image_metadata:
   caption: "Gramercy Works Alumina Plant Explosion. (Image is taken from the Department\
-    \ of Labor Mine Safety and Health Administration\_[Web site](http://www.msha.gov/).)"
+    \ of Labor Mine Safety and Health Administration\_{{% resource_link \"f89b5f26-2073-4821-a009-3bb97604e5fe\"\
+    \ \"Web site\" %}}.)"
   credit: ''
   image-alt: Photo of Gramercy Works Alumina Plant Explosion.
 learning_resource_types: []
