Sync all content

--- a/content/resources/10-805js06-th.md
+++ b/content/resources/10-805js06-th.md
@@ -8,8 +8,7 @@ file_size: 8584
 file_type: image/jpeg
 image_metadata:
   caption: "Gramercy Works Alumina Plant Explosion. (Image is taken from the Department\
-    \ of Labor Mine Safety and Health Administration\_{{% resource_link \"f89b5f26-2073-4821-a009-3bb97604e5fe\"\
-    \ \"Web site\" %}}.)"
+    \ of Labor Mine Safety and Health Administration\_[Web site](http://www.msha.gov/).)"
   credit: ''
   image-alt: Photo of Gramercy Works Alumina Plant Explosion.
 learning_resource_types: []
